@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Feb 13 18:29:05 2002 -->
+<!-- Wed May  1 10:57:18 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -160,9 +160,9 @@ installs.
 </pre></blockquote>
 </ol>
 
-<u>Installation from RedHat Linux RPMs</u><br><br>
+<u>Installation from Linux RPMs</u><br><br>
 
-If you are running RedHat Linux, you may wish to install TMDA via RPM
+If you are running Linux, you may wish to install TMDA via RPM
 instead.  A binary RPM can be built and installed directly from the source
 tarball:
 
@@ -170,6 +170,18 @@ tarball:
 
 # rpm -tb tmda-0.01.tgz 
 # rpm -Uvh /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
+
+</pre></blockquote>
+
+If your system lacks a <b>/usr/bin/python2</b>, you may get a
+dependency warning from RPM.  If you're sure your Python meets the 
+<a href="requirements.html">requirements</a>, then you can override this
+dependency check using the <em>--nodeps</em> option to RPM:
+
+<blockquote><pre>
+
+# rpm --nodeps -tb tmda-0.01.tgz 
+# rpm --nodeps -Uvh /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
 
 </pre></blockquote>
 
