@@ -1,3 +1,8 @@
+2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* install.ht: Add RPM instructions for systems without a
+	/usr/bin/python2.
+	
 2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-client.ht: Update Mutt/VVV-NNTP link.
